# aws-bedrock-agentcore-labs

./: .bedrock_agentcore.yaml  README.md  agent-run.json  agentcore_session.py  app.py  bedrock_agentcore_boto3_client.py  calculator_agent.py  commands.ps1  commands.sh  config.py  create_openai_vector_store.py  data_agent.py  get_bearer_token.py  guardrails.py  libra.py  luna.py  main.py  openid-configuration.json  pyproject.toml  setup_cognito.py  vector_store.py
.bedrock_agentcore/andromeda/: Dockerfile
.bedrock_agentcore/app/: Dockerfile
